force-app/main/default/objects/C_Translation__c/C_Translation__c.object-meta.xml
<CustomObject>
    <description>Translated text for form content in different languages</description>
    <label>Translation</label>
    <nameField>
        <label>Translation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>