force-app/main/default/objects/C_Translation__c/fields/C_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>C_Field_Name__c</fullName>
    <label>Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>