force-app/main/default/objects/C_Translation__c/fields/C_Page__c.field-meta.xml
<CustomField>
    <fullName>C_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Page</label>
    <referenceTo>C_Page__c</referenceTo>
    <relationshipLabel>Translations</relationshipLabel>
    <relationshipName>C_Translations</relationshipName>
    <type>Lookup</type>
</CustomField>