force-app/main/default/objects/C_Translation__c/fields/C_Translated_Text__c.field-meta.xml
<CustomField>
    <fullName>C_Translated_Text__c</fullName>
    <label>Translated Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>