force-app/main/default/objects/C_Translation__c/recordTypes/Page.recordType-meta.xml
<RecordType>
    <fullName>Page</fullName>
    <active>true</active>
    <description>Translation for a Page</description>
    <label>Page</label>
</RecordType>