force-app/main/default/objects/C_Translation__c/recordTypes/Question.recordType-meta.xml
<RecordType>
    <fullName>Question</fullName>
    <active>true</active>
    <description>Translation for a Question</description>
    <label>Question</label>
</RecordType>