force-app/main/default/objects/C_Translation__c/recordTypes/Response.recordType-meta.xml
<RecordType>
    <fullName>Response</fullName>
    <active>true</active>
    <description>Translation for a Response</description>
    <label>Response</label>
</RecordType>