force-app/main/default/objects/C_Translation__c/recordTypes/Section.recordType-meta.xml
<RecordType>
    <fullName>Section</fullName>
    <active>true</active>
    <description>Translation for a Section</description>
    <label>Section</label>
</RecordType>