force-app/main/default/objects/C_Translation__c/listViews/All_Translations.listView-meta.xml
<ListView>
    <fullName>All_Translations</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>C_Language__c</columns>
    <columns>C_Field_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Translations</label>
</ListView>